Primera version de la migracion de mentar a angular.

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
+@import "assets/styles/base.css";
+@import "assets/styles/skeleton.css";
+@import "assets/styles/layout.css";
+@import "assets/styles/settings.css";
+@import "assets/styles/font-awesome.css";
+@import "assets/styles/owl.carousel.css";
+@import "assets/styles/animsition.min.css";
+// @import "styles/color-gold.css";
