--- a/src/assets/styles/layout.css
+++ b/src/assets/styles/layout.css
@@ -5952,7 +5952,7 @@ a.quote-big-post-single h5:hover{
     font-family: 'Montserrat', sans-serif;
 	/* text-transform: uppercase; */
 	font-weight: 700;
-	color: #6D6E71;
+	color: #fff;
 	font-size:16px;
 	line-height:28px;
 	display: block;
@@ -5962,9 +5962,6 @@ a.quote-big-post-single h5:hover{
     -o-transition: all 300ms linear;
     -ms-transition: all 300ms linear;
     transition: all 300ms linear;
-}
-.smk_accordion .accordion_in .acc_head:hover {
-	color:#fff;
 }
 .smk_accordion .accordion_in.acc_active > .acc_head {
 	color:#fff;
@@ -5977,8 +5974,14 @@ a.quote-big-post-single h5:hover{
 	right: 20px;
 	top: 50%;
 	margin-top: -15px;
+  background: url('../images/acc2.png') no-repeat center center;
 }
-
+.smk_accordion .accordion_in .acc_head:hover .acc_icon_expand {
+	background: url('../images/acc2.png') no-repeat center center;
+}
+.smk_accordion .accordion_in.acc_active > .acc_head .acc_icon_expand {
+	background: url('../images/acc3.png') no-repeat center center;
+}
 .smk_accordion .accordion_in .acc_content {
 	color:#404040;
 	padding:30px;
@@ -9980,102 +9983,6 @@ h3, h4, h5 {
 }
 
 /* END CUSTOM MENTORI */
-
-
-/* DESCRIPTION OFFER */
-.description-offer {
-  padding: 40px 55px;
-  color: #ffff;
-  background-color: #6D6E71;;
-
-}
-.description-offer .subtitle-written {
-  margin-bottom: 0px;
-}
-
-.description-offer h5 {
-  margin-bottom: 20px;
-  line-height: 25px;
-}
-.description-offer h5 span {
-  color: #fff !important;
-}
-.description-offer p:first-child {
-  margin: 0px;
-}
-
-.description-offer p {
-  margin: 25px 0px;
-  text-align: center;
-}
-/* END DESCRIPTION OFFER */
-
-
-/* CARDS */
-
-.cards {
-  margin: 30px auto;
-}
-
-.cards .card {
-  max-width: 300px;
-}
-
-.cards .title-card {
-  padding: 12px 15px;
-  background-color: #6D6E71;
-}
-
-.cards .title-card h5 {
-  color: #fff;
-  text-align: start;
-}
-
-.cards .button-card {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  padding-bottom: 20px;
-  margin-top: 10px;
-}
-
-.cards .button-card h6 {
-  padding: 0;
-}
-
-.button-card button {
-  max-width: 267px;
-  height: 35px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  align-self: center;
-  background: #C6E0B4;
-  border-radius: 25px;
-  border-style: none;
-  cursor: pointer;
-  color: #6D6E71;
-  font-weight: 700;
-}
-
-.button-card a {
-  max-width: 261px;
-  width: 261px;
-  height: 52px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  align-self: center;
-  background: #C6E0B4;
-  border-radius: 25px;
-  border-style: none;
-  cursor: pointer;
-  color: #6D6E71;
-  font-weight: 700;
-  letter-spacing: 3px;
-}
-/* END CARDS */
 
 
 @media only screen and (min-width: 480px) and (max-width: 767px) {
