Se renombran los componentes

--- a/src/app/components/landing-section/landing-section.component.html
+++ b/src/app/components/landing-section/landing-section.component.html
@@ -10,8 +10,9 @@
         Te enseñamos a construir una marca
       </h3>
       <h3 class="subtitle-written third-font" id="home-subtitle">con PROPÓSITO</h3>
-      <p class="subtitle subtitle-v2 main-font">que te permita vivir de tu pasión y ayude a mejorar la
-        vida de otras personas</p>
+      <p class="subtitle subtitle-v2 main-font">
+        que a través de tu pasión genere ingresos y mejore la vida de otras personas.
+      </p>
     </div>
 
     <div class="button-buy">
