--- a/src/app/components/phase-section/phase-section.component.html
+++ b/src/app/components/phase-section/phase-section.component.html
@@ -7,12 +7,16 @@
       <div class="portfolio-box-2 grey-section">
         <img src="../../../assets/images/cards/stage-1.jpg" alt="mentoria-1">
         <h6>1. Modelo de negocio</h6>
-        <p>Aprenderás a definir tu propósito, vas a organizar y estructurar todas tus ideas, para
-          lograr
-          diferenciarte en el mercado.</p>
+        <p>
+          Planear tu modelo de negocio es el primer paso para crear una marca que perdure en el tiempo, genere un impacto real en la sociedad y venda todos los días.
+        </p>
         <div class="button-card">
           <h6>Valor $420.000</h6>
-          <!-- <a  href="./pdf/procedimiento.pdf" download>DESCARGAR PENSUM</a> -->
+        </div>
+        <div class="modal-image">
+          <p class="watch-image-modal">
+            > Ver contenido
+          </p>
         </div>
       </div>
     </div>
@@ -24,11 +28,16 @@
       <div class="portfolio-box-2 grey-section">
         <img src="../../../assets/images/cards/stage-2.jpg" alt="mentoria-2">
         <h6>2. Esencia de marca</h6>
-        <p>Aprenderás a darle una personalidad e identidad gráfica a tu marca, para lograr conectar
-          y enamorar a tu audiencia.</p>
+        <p>
+          Crear la esencia de marca, es crear una identidad que logre enamorar a tu audiencia y los convierta en clientes fieles que te compren y te recomienden.
+        </p>
         <div class="button-card">
           <h6>Valor $420.000</h6>
-          <!-- <a href="https://wa.link/fej1bl" target="_blank">COMPRAR MENTORÍA 2</a> -->
+        </div>
+        <div class="modal-image">
+          <p class="watch-image-modal">
+            > Ver contenido
+          </p>
         </div>
       </div>
     </div>
@@ -40,11 +49,16 @@
       <div class="portfolio-box-2 grey-section">
         <img src="../../../assets/images/cards/stage-3.jpg" alt="mentoria-3">
         <h6>3. Estrategia digital</h6>
-        <p>Aprenderás todo sobre comunicación estratégica, para lograr crear contenido inspirador y
-          creativo en Instagram.</p>
+        <p>
+          La estrategia digital es el paso definitivo a comunicar, dar a conocer y hacer reconocer tu marca en Instagram, a través de contenido estratégico, inspirador y creativo.
+        </p>
         <div class="button-card">
           <h6>Valor $580.000</h6>
-          <!-- <button>COMPRAR MENTORÍA 3</button> -->
+        </div>
+        <div class="modal-image">
+          <p class="watch-image-modal">
+            > Ver contenido
+          </p>
         </div>
       </div>
     </div>
@@ -59,8 +73,9 @@
         <p>Si realmente estás dispuesto a crear una marca con propósito, aprovecha nuestro descuento
           por tomar las 3 mentorías y ahórrate $220.000</p>
         <div class="button-card">
+          <p>Valor: $1.420.000</p>
           <h6>Valor $1.200.000</h6>
-          <a href="https://wa.link/lsj1o4" target="_blank" style="background: #f0eb95;">COMPRAR
+          <a href="https://wa.link/lsj1o4" target="_blank">COMPRAR
             MENTORÍA</a>
         </div>
       </div>
