Se modifica el componente de acordion.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,11 @@
-<app-component-one></app-component-one>
-<app-component-two></app-component-two>
-<app-component-three></app-component-three>
-<app-component-four></app-component-four>
-<app-component-five></app-component-five>
-<app-component-six></app-component-six>
-<app-component-seven></app-component-seven>
-<app-component-eight></app-component-eight>
-<app-component-nine></app-component-nine>
-<app-component-ten></app-component-ten>
+<app-menu></app-menu>
+<app-landing-section></app-landing-section>
+<app-steps-section></app-steps-section>
+<app-results-section></app-results-section>
+<app-life-line-section></app-life-line-section>
+<app-brand-path-section></app-brand-path-section>
+<app-phase-section></app-phase-section>
+<app-accordion></app-accordion>
+<app-coursel></app-coursel>
+<app-free-advice-section></app-free-advice-section>
+<app-footer></app-footer>
