--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,3 +7,8 @@
 @import "assets/styles/owl.carousel.css";
 @import "assets/styles/animsition.min.css";
 // @import "styles/color-gold.css";
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+$color-gray: #6D6E71;
