--- a/src/app/components/phase-section/phase-section.component.html
+++ b/src/app/components/phase-section/phase-section.component.html
@@ -7,14 +7,14 @@
       <div class="portfolio-box-2 grey-section">
         <img src="../../../assets/images/cards/stage-1.jpg" alt="mentoria-1">
         <h6>1. Modelo de negocio</h6>
-        <p>
-          Planear tu modelo de negocio es el primer paso para crear una marca que perdure en el tiempo, genere un impacto real en la sociedad y venda todos los días.
+        <p class="max-height">
+        Planear tu modelo de negocio es el primer paso para crear una marca que perdure en el tiempo, genere un impacto real en la sociedad y venda todos los días.
         </p>
         <div class="button-card">
           <h6>Valor $420.000</h6>
         </div>
         <div class="modal-image">
-          <p class="watch-image-modal">
+          <p class="watch-image-modal" (click)="openModal(1)">
             > Ver contenido
           </p>
         </div>
@@ -35,7 +35,7 @@
           <h6>Valor $420.000</h6>
         </div>
         <div class="modal-image">
-          <p class="watch-image-modal">
+          <p class="watch-image-modal" (click)="openModal(2)">
             > Ver contenido
           </p>
         </div>
@@ -56,7 +56,7 @@
           <h6>Valor $580.000</h6>
         </div>
         <div class="modal-image">
-          <p class="watch-image-modal">
+          <p class="watch-image-modal" (click)="openModal(3)">
             > Ver contenido
           </p>
         </div>
