--- a/src/app/components/form/form.component.scss
+++ b/src/app/components/form/form.component.scss
@@ -2,79 +2,16 @@
   padding: 0px;
 }
 
-#ajax-form {
-	width: 100%;
-	font-size: 10px;
-	line-height:14px;
-	color:#101010;
-	margin:0 auto;
-}
-#ajax-form label {
-	display: block;
-	font-size: 14px;
-	line-height:30px;
-}
-#ajax-form input{
-	width: 100%;
-	border:none;
-	font-weight:400;
-	letter-spacing:2px;
-	font-size: 12px;
-	line-height:22px;
-	padding-bottom: 10px;
-	background:transparent;
-}
-#ajax-form textarea {
-	width:100%;
-	font-weight:400;
-	letter-spacing:2px;
-	font-size: 12px;
-	line-height:22px;
-	height:62px;
-	margin-top:2px;
-	padding-bottom: 10px;
-	border:none;
-	background: transparent;
-}
 .error {
 	font: 10px/22px 'Open Sans', sans-serif;
 	display: none;
 	color:#ff835c;
-}
-#ajaxsuccess {
-	background: #f5f5f5;
-	color:#101010;
-	font: 20px/60px 'Open Sans', sans-serif;
-	height:60px;
-	display: none;
-	padding-left:10px;
-	width: 100%;
-	margin-left: auto;
-	margin-right: auto;
-	margin-top: 30px;
 }
 
 .text-align-center{
 	text-align:center;
 	padding-top:10px;
  }
-#ajax-form textarea:active,
-#ajax-form input:active {
-	color: #6D6E71;
-}
-#ajax-form textarea:active,
-#ajax-form input:hover {
-	color: #6D6E71;
-}
-#ajax-form textarea:focus,
-#ajax-form input:focus {
-    outline: none;
-}
-#ajax-form textarea,
-#ajax-form input {
-	border-bottom:2px solid #6D6E71;
-	color: #6D6E71;
-}
 
 /* MODAL */
 
@@ -103,5 +40,22 @@
 
   .modal-content form {
     padding: 0px 50px;
+  }
+}
+
+.error-message {
+  color: red;
+}
+
+@media only screen and (max-width: 479px) {
+  .modal-content {
+    width: 342px;
+  }
+}
+
+
+@media only screen and (min-width: 768px) and (max-width: 959px){
+.container .sixteen.columns {
+    width: 695px;
   }
 }
