Se renombra el componente del menu.

--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -6,19 +6,19 @@
           <div class="nav-logo"><img src="../../../assets/images/logo.png" alt="Logo"></div>
         </li>
         <li>
-          <a href="#mentoria" >Mentoría</a>
+          <a href="#mentoria" class="scroll" >Mentoría</a>
         </li>
         <li>
-          <a href="#etapas" >Etapas</a>
+          <a href="#etapas" class="scroll">Etapas</a>
         </li>
         <li>
-          <a href="#proposito" >Proposito</a>
+          <a href="#proposito" class="scroll">Proposito</a>
         </li>
         <li>
-          <a href="#asesoria" >Asesoría gratis</a>
+          <a href="#asesoria" class="scroll" >Asesoría gratis</a>
         </li>
         <li>
-          <a href="#contacto" >Contacto</a>
+          <a href="#etapas" class="scroll">Contacto</a>
         </li>
       </ul>
     </nav>
