Solucion de conflictos en el build

--- a/src/assets/styles/font-awesome.css
+++ b/src/assets/styles/font-awesome.css
@@ -43,7 +43,7 @@
   font-style: normal;
   text-decoration: inherit;
   -webkit-font-smoothing: antialiased;
-  *margin-right: .3em;
+  margin-right: 0.3em;
 }
 [class^="icon-"]:before,
 [class*=" icon-"]:before {
@@ -151,7 +151,7 @@ a [class*=" icon-"] {
 }
 [class^="icon-"].pull-left,
 [class*=" icon-"].pull-left {
-  margin-right: .3em;
+  margin-right: 0.3em;
 }
 [class^="icon-"].pull-right,
 [class*=" icon-"].pull-right {
@@ -270,11 +270,11 @@ a [class*=" icon-"] {
   height: 100%;
   font-size: 1em;
   line-height: inherit;
-  *line-height: 2em;
+  line-height: 2em;
 }
 .icon-stack .icon-stack-base {
   font-size: 2em;
-  *line-height: 1em;
+  line-height: 1em;
 }
 /* Animated rotating icon */
 .icon-spin {
