--- a/src/assets/styles/owl.carousel.css
+++ b/src/assets/styles/owl.carousel.css
@@ -238,7 +238,7 @@
 	color: #FFF;
 	display: inline-block;
 	zoom: 1;
-	*display: inline;/*IE7 life-saver */
+	display: inline;/*IE7 life-saver */
 
 	font-size: 12px;
 	-webkit-border-radius: 30px;
@@ -261,7 +261,7 @@
 .owl-theme .owl-controls .owl-page{
 	display: inline-block;
 	zoom: 1;
-	*display: inline;/*IE7 life-saver */
+	display: inline;/*IE7 life-saver */
 }
 .owl-theme .owl-controls .owl-page span{
 	display: block;
