--- a/src/assets/styles/settings.css
+++ b/src/assets/styles/settings.css
@@ -1519,7 +1519,7 @@ border-style:none;
 }
 
 .tp-simpleresponsive >ul >li{
-	list-stye:none;
+	list-style:none;
 	position:absolute;
 	visibility:hidden;
 }
