Se agregan los mensajes de error y exito.

--- a/src/app/components/modal-phase/modal-phase.component.scss
+++ b/src/app/components/modal-phase/modal-phase.component.scss
@@ -3,17 +3,17 @@
 }
 
 .image-1 {
-  background: url("../../../assets/images/pensum-1.jpg") no-repeat center center;
+  background: url("/assets/images/pensum-1.jpg") no-repeat center center;
   background-size: cover;
 }
 
 .image-2 {
-  background: url("../../../assets/images/pensum-2.jpg") no-repeat center center;
+  background: url("/assets/images/pensum-2.jpg") no-repeat center center;
   background-size: cover;
 }
 
 .image-3 {
-  background: url("../../../assets/images/pensum-3.jpg") no-repeat center center;
+  background: url("/assets/images/pensum-3.jpg") no-repeat center center;
   background-size: cover;
 }
 
