Cambio en la ruta de la imagen del logo

--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -1,7 +1,7 @@
 <div class="header-top">
 
   <header class="cd-main-header green-section">
-    <span class="cd-logo"><img src="/assets/images/logo.png" alt="Logo"></span>
+    <span class="cd-logo"><img src="../../../assets/images/logo.png" alt="Logo"></span>
 
     <button pButton pRipple type="button" icon="pi pi-bars" (click)="visibleSidebar = true"
      class="p-button-rounded p-button-text button-menu"></button>
@@ -9,7 +9,7 @@
      <nav>
       <ul id="cd-primary-nav" class="cd-primary-nav is-fixed">
         <li>
-          <div class="nav-logo"><img src="/assets/images/logo.png" alt="Logo"></div>
+          <div class="nav-logo"><img src="../../../assets/images/logo.png" alt="Logo"></div>
         </li>
         <li>
           <a href="#mentoria" class="scroll">Mentoría</a>
