--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -3,7 +3,7 @@
     <nav>
       <ul>
         <li>
-          <div class="nav-logo"><img src="/assets/images/logo.png" alt="Logo"></div>
+          <div class="nav-logo"><img src="../images/logo.png" alt="Logo"></div>
         </li>
         <li>
           <a href="#mentoria" class="scroll" >Mentoría</a>
