--- a/src/app/components/phase-section/phase-section.component.html
+++ b/src/app/components/phase-section/phase-section.component.html
@@ -1,11 +1,11 @@
 <section class="cards">
   <div class="container container-cards">
-    <div class="one-third column card" data-scroll-reveal="enter left move 200px over 1s after 0.8s">
+    <div class="one-third column card">
       <div class="title-card">
         <h5 class="subtitle-written">Etapa 1</h5>
       </div>
       <div class="portfolio-box-2 grey-section">
-        <img src="/assets/images/cards/stage-1.jpg" alt="mentoria-1">
+        <img src="assets/images/cards/stage-1.jpg" alt="mentoria-1">
         <h6>1. Modelo de negocio</h6>
         <p class="max-height">
         Planear tu modelo de negocio es el primer paso para crear una marca que perdure en el tiempo, genere un impacto real en la sociedad y venda todos los días.
@@ -21,12 +21,12 @@
       </div>
     </div>
 
-    <div class="one-third column card" data-scroll-reveal="enter left move 200px over 1s after 0.8s">
+    <div class="one-third column card">
       <div class="title-card">
         <h5 class="subtitle-written">Etapa 2</h5>
       </div>
       <div class="portfolio-box-2 grey-section">
-        <img src="/assets/images/cards/stage-2.jpg" alt="mentoria-2">
+        <img src="assets/images/cards/stage-2.jpg" alt="mentoria-2">
         <h6>2. Esencia de marca</h6>
         <p>
           Crear la esencia de marca, es crear una identidad que logre enamorar a tu audiencia y los convierta en clientes fieles que te compren y te recomienden.
@@ -42,12 +42,12 @@
       </div>
     </div>
 
-    <div class="one-third column card" data-scroll-reveal="enter left move 200px over 1s after 0.8s">
+    <div class="one-third column card">
       <div class="title-card">
         <h5 class="subtitle-written">Etapa 3</h5>
       </div>
       <div class="portfolio-box-2 grey-section">
-        <img src="/assets/images/cards/stage-3.jpg" alt="mentoria-3">
+        <img src="assets/images/cards/stage-3.jpg" alt="mentoria-3">
         <h6>3. Estrategia digital</h6>
         <p>
           La estrategia digital es el paso definitivo a comunicar, dar a conocer y hacer reconocer tu marca en Instagram, a través de contenido estratégico, inspirador y creativo.
@@ -63,12 +63,12 @@
       </div>
     </div>
 
-    <div class="one-third column card" data-scroll-reveal="enter left move 200px over 1s after 0.8s">
+    <div class="one-third column card">
       <div class="title-card">
         <h5 class="subtitle-written">Mentoría full</h5>
       </div>
       <div class="portfolio-box-2 grey-section">
-        <img src="/assets/images/cards/full.jpg" alt="mentoria-full">
+        <img src="assets/images/cards/full.jpg" alt="mentoria-full">
         <h6>Mentoría full</h6>
         <p>Si realmente estás dispuesto a crear una marca con propósito, aprovecha nuestro descuento
           por tomar las 3 mentorías y ahórrate $220.000</p>
