--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -3,7 +3,7 @@
     <nav>
       <ul>
         <li>
-          <div class="nav-logo"><img src="../images/logo.png" alt="Logo"></div>
+          <div class="nav-logo"><img src="assets/images/Logo.png" alt="Logo"></div>
         </li>
         <li>
           <a href="#mentoria" class="scroll" >Mentoría</a>
@@ -12,13 +12,13 @@
           <a href="#etapas" class="scroll">Etapas</a>
         </li>
         <li>
-          <a href="#proposito" class="scroll">Proposito</a>
+          <a href="#proposito" class="scroll">Propósito</a>
         </li>
         <li>
           <a href="#asesoria" class="scroll" >Asesoría gratis</a>
         </li>
         <li>
-          <a href="#etapas" class="scroll">Contacto</a>
+          <a href="#contacto" class="scroll">Contacto</a>
         </li>
       </ul>
     </nav>
