Se agregan las alertas despues del envio de correos.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,3 +9,6 @@
 <app-coursel></app-coursel>
 <app-free-advice-section></app-free-advice-section>
 <app-footer></app-footer>
+
+
+<p-toast position="top-left"></p-toast>
