--- a/src/app/components/free-advice-section/free-advice-section.component.html
+++ b/src/app/components/free-advice-section/free-advice-section.component.html
@@ -29,6 +29,8 @@
 
       <div class="sixteen columns">
         <label for="phone">
+          <span class="error-message" *ngIf="form.get('phone')?.hasError('minlength') && form.get('phone')?.touched">Debe de tener minimo 10 numeros</span>
+            <span class="error-message" *ngIf="form.get('phone')?.hasError('maxlength') && form.get('phone')?.touched">Debe de tener maximo 10 numeros</span>
           <span class="error-message" *ngIf="form.get('phone')?.hasError('required') && form.get('phone')?.touched">Porfa ingresa tu Whatsapp</span>
         </label>
         <input name="phone" id="tel" type="tel" formControlName="phone" required placeholder="Whatsapp: *" />
@@ -44,7 +46,12 @@
       </div>
       <div class="sixteen columns">
         <div id="button-con">
-          <input type="button" class="send_message" value="ASESORÍA GRATIS" (click)="saveUser()" [disabled]="form.invalid">
+          <button type="button" class="send_message" (click)="saveUser()" [disabled]="showLoader || form.invalid">
+            <ng-container *ngIf="!showLoader">
+              ASESORÍA GRATIS
+            </ng-container >
+            <mat-spinner *ngIf="showLoader" [diameter]="25" [strokeWidth]="6"></mat-spinner>
+          </button>
         </div>
       </div>
     </form>
@@ -52,3 +59,5 @@
   </div>
 
 </section>
+
+<p-toast position="top-left" key="myKey1"></p-toast>
