--- a/src/app/components/modal-phase/modal-phase.component.scss
+++ b/src/app/components/modal-phase/modal-phase.component.scss
@@ -6,21 +6,21 @@
   width: 385px;
 }
 .image-1 {
-  background-image: url('/assets/images/pensum-1.JPG');
+  background-image: url('../../../assets/images/pensum-1.jpg');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
 }
 
 .image-2 {
-  background-image: url("/assets/images/pensum-2.JPG");
+  background-image: url("../../../assets/images/pensum-2.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
 }
 
 .image-3 {
-  background-image: url("/assets/images/pensum-3.JPG");
+  background-image: url("../../../assets/images/pensum-3.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
