--- a/src/app/components/form/form.component.scss
+++ b/src/app/components/form/form.component.scss
@@ -59,3 +59,52 @@
     width: 695px;
   }
 }
+
+
+#button-con button {
+	position: relative;
+	display: inline-block;
+	outline: none;
+	width:240px;
+	padding-bottom:15px;
+	padding-top:15px;
+	text-decoration: none;
+	text-transform: uppercase;
+	letter-spacing: 3px;
+	font-family: 'Lato', sans-serif;
+	font-weight:700;
+	font-size: 16px;
+	border:2px solid #6D6E71;
+	color: #6D6E71;
+	border-radius:40px;
+	text-align:center;
+	overflow:hidden;
+	z-index:100;
+	cursor:pointer;
+	background:rgba(0,0,0,0);
+    -webkit-transition: all 300ms linear;
+    -moz-transition: all 300ms linear;
+    -o-transition: all 300ms linear;
+    -ms-transition: all 300ms linear;
+    transition: all 300ms linear;
+}
+#button-con button:hover,
+#button-con button:focus {
+	outline: none;
+}
+#button-con button:hover{
+	color: #fff;
+}
+
+#button-con button:hover{
+	border:2px solid #C6E0B4;
+	background: #C6E0B4;
+}
+
+mat-spinner {
+  margin: 0 auto;
+}
+
+::ng-deep .mat-progress-spinner circle, .mat-spinner circle {
+  stroke: #757ca1;
+}
